==== gnome-vfs 2.3.2 ====

2003-05-19  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Bump to 2.3.2.

2003-05-17  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: add the programs subdir so the programs are built by
	default

2003-05-16 Radu Greab  <radu@netsoft.ro>
           Christophe Fergeau  <teuf@users.sourceforge.net>

	* libgnomevfs/gnome-vfs-utils.c(gnome_vfs_get_volume_free_space): 
	fixed a leak when the function was called with an non-file:// uri
	* modules/file-method.c(do_is_local): ncpfs file systems aren't local
	(fixes #97789) 

2003-05-16  Bastien Nocera  <hadess@hadess.net>

	* programs/gnomevfs-ls.c: (show_data), (main): remove use of SHOW_ICON

2003-05-16  Bastien Nocera  <hadess@hadess.net>

	reviewed by: Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	* programs/.cvsignore:
	* programs/Makefile.am:
	* programs/gnomevfs-cat.c:
	* programs/gnomevfs-copy.c:
	* programs/gnomevfs-info.c:
	* programs/gnomevfs-ls.c:
	* programs/gnomevfs-mkdir.c: added some programs to test out
	gnome-vfs methods, use the gnomevfs- prefix for them, add some
	more information from get_info in -ls and -info

2003-05-14  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	* configure.in: check "getdelim" in AC_CHECK_FUNCS

	* libgnomevfs/Makefile.am (EXTRA_DIST): remove getdelim.c

	* modules/extfs-method.c: Wrap getdelim definition inside
	#ifndef HAVE_GETDELIM

	(patch reviewed by alexl@redhat.com)

2003-05-14  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* modules/http-method.c: Bring comment about gconf keys into
	line with reality.

2003-05-13  Shailesh Mittal  <shailesh.mittal@wipro.com>

	(applied by Ian McKellar <yakk@yakk.net>)

	Changes are made by keeping nautilus in focus.

	* libgnomevfs/gnome-vfs-uri.c:
	Macro for URI_DELIMITER_IPV6_SET is added and a value 
	is added to array of structures uri_strspn_sets[].

	(split_toplevel_uri): Changed to parse IPv6 address 