@@ -1,3 +1,10 @@
+2003-05-20  Christophe Fergeau  <teuf@users.sourceforge.net>
+
+	* modules/ftp-method.c
+	* modules/http-method.c
+	* modules/ssh-method.c: fixed potential crash with uris containing
+	  %2F, fixed a few small leaks
+
 ==== gnome-vfs 2.3.2 ====
 
 2003-05-19  Alexander Larsson  <alexl@redhat.com>
